--- a/mole/styles.css
+++ b/mole/styles.css
@@ -5,17 +5,26 @@ body, img {
 }
 div.board {
     position: relative;
-    z-index: 1;
+    z-index: 10;
+    height: 256px;
+    overflow: hidden;
 }
 .background {
-    opacity: .2;
+    opacity: 1;
     position: relative;
 }
 .grassUpper {
-    z-index: -10;
+    z-index: 0;
+    position: relative;
 }
 .grassLower {
-    z-index: 10;
+    z-index: 1;
+    position: relative;
+}
+.dirt {
+    position: absolute;
+    top: 50px;
+    z-index: -1;
 }
 .moleContainer {
     width: 178px;
@@ -23,6 +32,9 @@ div.board {
     position: absolute;
     top: 100px;
     z-index: 0;
+}
+.moleContainer.riseFallLaugh {
+    cursor: pointer;
 }
 img.mole {
     position: relative;
@@ -39,39 +51,33 @@ img.mole {
 }
 
 
-
-@-webkit-keyframes laugh {
-    0% {left: -178px;}
-    100% {left: -712px;}
+.moleContainer.riseFallLaugh {
+    -webkit-animation: rise 1000ms 0ms forwards, fall 1000ms 1000ms forwards;
 }
-.moleContainer.laugh img {
-    -webkit-animation: laugh 150ms steps(3) 4 alternate;
-}
-@-webkit-keyframes hit {
-    0% {left: -712px;}
-    100% {left: -1424px;}
-}
-.moleContainer.hit img {
-    -webkit-animation: hit 150ms 0ms steps(4) 2 alternate
+.moleContainer.riseFallLaugh img {
+    -webkit-animation: laugh 500ms 1000ms steps(3);
 }
 .moleContainer.hit {
-    -webkit-animation: rise 50ms 0ms forwards, fall 100ms 50ms forwards;
+    -webkit-animation: rise 1000ms 0ms forwards, fall 100ms 1000ms forwards;
 }
+.moleContainer.hit img {
+    -webkit-animation: hit 350ms 0ms steps(4);
+}
+
+
 @-webkit-keyframes rise {
     0% {top: 100px;}
     100% {top: 0;}
 }
-.moleContainer.rise {
-    -webkit-animation: rise 1000ms 0ms forwards;
-}
-@-webkit-keyframes fallAndLaugh {
+@-webkit-keyframes fall {
     0% {top: 0;}
-    50% {left: -178px;}
-    100% {
-        top: 100px;
-        left: -712px;
-    }
+    100% {top: 100px;}
 }
-.moleContainer.fall {
-    -webkit-animation: fallAndLaugh 1000ms 0ms forwards;
+@-webkit-keyframes laugh {
+    0% {left: -178px;}
+    100% {left: -712px;}
+}
+@-webkit-keyframes hit {
+    0% {left: -712px;}
+    100% {left: -1424px;}
 }
