--- a/mole/styles.css
+++ b/mole/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Scoreboard';
+    src: url('data/font/scoreboard.ttf')  format('truetype'); /* Safari, Android, iOS */
+}
+
 body, img {
     margin: 0;
     padding: 0;
@@ -14,8 +19,67 @@ div.board {
     position: relative;
     z-index: 10;
     height: 256px;
+    width: 1024px;
     overflow: hidden;
 }
+#overlay {
+    background: rgba(0,0,0,0.9);
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    z-index: 1;
+    top: 0;
+}
+#msg {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    color: white;
+    width: 512px;
+    height: 56px;
+    font-size: 32px;
+    text-align: center;
+}
+#replay {
+    width: 150px;
+    height: 30px;
+    border: 1px solid black;
+    background: rgb(0, 175, 0);
+    font-size: 16px;
+    text-align: center;
+    text-transform: uppercase;
+    margin: auto;
+    line-height: 30px;
+    border-radius: 5px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    cursor: pointer;
+}
+#scoreboard {
+    background: #222;
+    width: 1024px;
+    height: 40px;
+    position: relative;
+}
+.scoreContainer {
+    float: right;
+}
+.scoreContainer div {
+    float: left;
+    font-size: 40px;
+    color: red;
+    font-family: 'Scoreboard';
+}
+.timer, .scorePossible {
+    margin-right: 20px;
+}
+
 .background {
     opacity: 1;
     position: relative;
